@@ -14,6 +14,7 @@ import com.bemo.hr.employee.infrastructure.ScheduleRuleRepository;
 import com.bemo.hr.reporting.api.ReportingApi;
 import com.bemo.hr.reporting.domain.AttendanceDecision;
 import com.bemo.hr.reporting.domain.AttendanceReport;
+import com.bemo.hr.reporting.domain.AttendanceReportDecision;
 import com.bemo.hr.reporting.domain.DayAnomaly;
 import com.bemo.hr.reporting.domain.DayAnomalyDecision;
 import com.bemo.hr.reporting.domain.DayAnomalyResultSnapshot;
@@ -24,16 +25,21 @@ import com.bemo.hr.reporting.domain.DailyStatus;
 import com.bemo.hr.reporting.domain.HolidayProposal;
 import com.bemo.hr.reporting.domain.HolidayProposalStatus;
 import com.bemo.hr.reporting.domain.ReportStatus;
+import com.bemo.hr.reporting.infrastructure.AttendanceReportDecisionRepository;
 import com.bemo.hr.reporting.infrastructure.AttendanceReportRepository;
 import com.bemo.hr.reporting.infrastructure.DayAnomalyRepository;
 import com.bemo.hr.reporting.infrastructure.DayAnomalyResultSnapshotRepository;
 import com.bemo.hr.reporting.infrastructure.DailyAttendanceResultRepository;
 import com.bemo.hr.reporting.infrastructure.HolidayProposalRepository;
+import com.bemo.hr.shared.api.TransitionResponse;
+import com.bemo.hr.shared.api.WorkflowTransitions;
 import com.bemo.hr.shared.domain.BusinessRuleException;
 import com.bemo.hr.shared.domain.NotFoundException;
+import com.bemo.hr.shared.idempotency.application.IdempotencyService;
 import com.bemo.hr.shared.security.TenantApplicationRepository;
 import com.bemo.hr.shared.security.TenantContext;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -53,12 +59,25 @@ import java.util.HashMap;
 import java.util.HexFormat;
 import java.util.List;
 import java.util.Map;
+import java.util.UUID;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Service
 @Transactional(readOnly = true)
 public class ReportingService {
+    private static final Map<String, List<String>> ATTENDANCE_REPORT_WORKFLOW = Map.of(
+            "DRAFT", List.of("START_REVIEW"),
+            "IN_REVIEW", List.of("APPROVE", "EXPORT"),
+            "APPROVED", List.of("REOPEN", "EXPORT"),
+            "EXPORTED", List.of("REOPEN"));
+
+    private static final Map<String, List<String>> ATTENDANCE_REPORT_ACTIONS = Map.of(
+            "DRAFT", List.of("DECISION"),
+            "IN_REVIEW", List.of("DECISION", "BULK_DECISION", "DOWNTIME_DECISION", "DAY_ANOMALY", "HOLIDAY_DECISION", "APPROVE", "EXPORT"),
+            "APPROVED", List.of("REOPEN", "EXPORT"),
+            "EXPORTED", List.of("REOPEN"));
+
     private final AttendanceReportRepository attendanceReportRepository;
     private final DailyAttendanceResultRepository dailyAttendanceResultRepository;
     private final HolidayProposalRepository holidayProposalRepository;
@@ -73,6 +92,8 @@ public class ReportingService {
     private final ZoneId companyZone;
     private final com.bemo.hr.audit.application.AuditService auditService;
     private final TenantApplicationRepository tenantApplicationRepository;
+    private final AttendanceReportDecisionRepository attendanceReportDecisionRepository;
+    private final IdempotencyService idempotencyService;
 
     public ReportingService(AttendanceReportRepository attendanceReportRepository,
                             DailyAttendanceResultRepository dailyAttendanceResultRepository,
@@ -87,7 +108,9 @@ public class ReportingService {
                             ReportExporter reportExporter,
                             @Value("${hr.company-zone:Africa/Cairo}") String companyZone,
                             com.bemo.hr.audit.application.AuditService auditService,
-                            TenantApplicationRepository tenantApplicationRepository) {
+                            TenantApplicationRepository tenantApplicationRepository,
+                            AttendanceReportDecisionRepository attendanceReportDecisionRepository,
+                            IdempotencyService idempotencyService) {
         this.attendanceReportRepository = attendanceReportRepository;
         this.dailyAttendanceResultRepository = dailyAttendanceResultRepository;
         this.holidayProposalRepository = holidayProposalRepository;
@@ -102,6 +125,8 @@ public class ReportingService {
         this.companyZone = ZoneId.of(companyZone);
         this.auditService = auditService;
         this.tenantApplicationRepository = tenantApplicationRepository;
+        this.attendanceReportDecisionRepository = attendanceReportDecisionRepository;
+        this.idempotencyService = idempotencyService;
     }
 
     public List<ReportingApi.Summary> list() {
@@ -113,7 +138,7 @@ public class ReportingService {
     }
 
     public List<ReportingApi.PeriodOption> availablePeriods(int year) {
-        if (year < 2000 || year > 2200) throw new BusinessRuleException("Year is outside the supported range.");
+        if (year < 2000 || year > 2200) throw new BusinessRuleException("Year is outside the supported range.", "RPT_YEAR_OUT_OF_RANGE", HttpStatus.CONFLICT);
         var reports = attendanceReportRepository.findByPeriodStartBetween(LocalDate.of(year, 1, 1), LocalDate.of(year, 12, 31));
         var activeCategories = attendanceCategoryRepository.findAll().stream().filter(AttendanceCategory::isActive).toList();
         boolean hasMonthly = activeCategories.isEmpty()
@@ -135,26 +160,68 @@ public class ReportingService {
         return List.copyOf(options);
     }
 
+    public ReportingApi.PreviewResponse preview(LocalDate periodStart, LocalDate periodEnd, PayCycle payCycle) {
+        validatePeriod(periodStart, periodEnd);
+        var categories = attendanceCategoryRepository.findAll().stream()
+                .filter(AttendanceCategory::isActive)
+                .filter(category -> category.getPayCycle() == payCycle)
+                .toList();
+        var categoryIds = categories.stream().map(AttendanceCategory::getId).collect(Collectors.toSet());
+        var employees = employeeRepository.findAll().stream()
+                .filter(employee -> categoryIds.contains(employee.getCategoryId())).toList();
+        var schedules = scheduleRuleRepository.findAll().stream()
+                .filter(schedule -> categoryIds.contains(schedule.getCategoryId()))
+                .collect(Collectors.groupingBy(ScheduleRule::getCategoryId));
+        var previewCategories = categories.stream().map(category -> new ReportingApi.PreviewCategory(
+                category.getId(), category.getName(),
+                (int) employees.stream().filter(employee -> employee.getCategoryId().equals(category.getId())).count())).toList();
+        int workdays = Math.toIntExact(java.time.temporal.ChronoUnit.DAYS.between(periodStart, periodEnd) + 1);
+        int scheduleCoverage = 0;
+        for (var category : categories) {
+            long count = employees.stream().filter(employee -> employee.getCategoryId().equals(category.getId())).count();
+            var rules = schedules.getOrDefault(category.getId(), List.of());
+            for (LocalDate date = periodStart; !date.isAfter(periodEnd); date = date.plusDays(1)) {
+                LocalDate day = date;
+                if (rules.stream().anyMatch(rule -> rule.appliesOn(day))) scheduleCoverage += count;
+            }
+        }
+        var existing = attendanceReportRepository.findByPayCycleAndPeriodStartAndPeriodEnd(payCycle, periodStart, periodEnd);
+        String existingReportId = existing.map(AttendanceReport::getId).orElse(null);
+        var overlappingReportIds = attendanceReportRepository.findAllByOrderByPeriodStartDesc().stream()
+                .filter(report -> report.getPayCycle() == payCycle)
+                .filter(report -> !report.getPeriodStart().equals(periodStart) || !report.getPeriodEnd().equals(periodEnd))
+                .filter(report -> !report.getPeriodStart().isAfter(periodEnd) && !report.getPeriodEnd().isBefore(periodStart))
+                .map(AttendanceReport::getId).toList();
+        return new ReportingApi.PreviewResponse(periodStart, periodEnd, payCycle, previewCategories,
+                employees.size(), workdays, scheduleCoverage, existingReportId, overlappingReportIds);
+    }
+
     @Transactional
     public ReportingApi.Details create(ReportingApi.CreateRequest request, String actor) {
         validatePeriod(request.periodStart(), request.periodEnd());
         PayCycle payCycle = request.payCycle();
+        var existing = attendanceReportRepository.findByPayCycleAndPeriodStartAndPeriodEnd(
+                payCycle, request.periodStart(), request.periodEnd());
+        if (existing.isPresent()) {
+            return details(existing.get());
+        }
         if (attendanceReportRepository.existsByPayCycleAndPeriodStartLessThanEqualAndPeriodEndGreaterThanEqual(
                 payCycle, request.periodEnd(), request.periodStart())) {
-            throw new BusinessRuleException("A report for this pay cycle already overlaps the selected period.");
+            throw new BusinessRuleException("A report for this pay cycle already overlaps the selected period.", "RPT_OVERLAPPING_REPORT", HttpStatus.CONFLICT);
         }
         var categories = attendanceCategoryRepository.findAll().stream()
                 .filter(AttendanceCategory::isActive)
                 .filter(category -> category.getPayCycle() == payCycle)
                 .collect(Collectors.toMap(AttendanceCategory::getId, Function.identity()));
-        if (categories.isEmpty()) throw new BusinessRuleException("No attendance categories use this pay cycle.");
+        if (categories.isEmpty()) throw new BusinessRuleException("No attendance categories use this pay cycle.", "RPT_NO_CATEGORIES_FOR_CYCLE", HttpStatus.CONFLICT);
         var schedules = scheduleRuleRepository.findAll().stream()
                 .filter(schedule -> categories.containsKey(schedule.getCategoryId()))
                 .collect(Collectors.groupingBy(ScheduleRule::getCategoryId));
         var employees = employeeRepository.findAll().stream()
                 .filter(employee -> categories.containsKey(employee.getCategoryId())).toList();
         var report = attendanceReportRepository.save(new AttendanceReport(request.periodStart(), request.periodEnd(), payCycle,
-                configurationHash(categories.values(), schedules.values().stream().flatMap(List::stream).toList(), employees), actor));
+                configurationHash(categories.values(), schedules.values().stream().flatMap(List::stream).toList(), employees),
+                generationHash(request.periodStart(), request.periodEnd(), payCycle), actor));
 
         var confirmedHolidays = confirmedHolidayRepository.findByWorkDateBetween(request.periodStart(), request.periodEnd()).stream()
                 .map(holiday -> holiday.getCategoryId() + "|" + holiday.getWorkDate()).collect(Collectors.toSet());
@@ -195,19 +262,22 @@ public class ReportingService {
         return details(report);
     }
 
-    private final java.util.Set<String> processedOperations = java.util.concurrent.ConcurrentHashMap.newKeySet();
-
     @Transactional
     public ReportingApi.BulkDecisionResponse bulkDecide(String reportId, ReportingApi.BulkDecisionRequest request, String actor) {
-        if (!processedOperations.add(request.operationId())) {
-            throw new BusinessRuleException("هذه العملية تم تنفيذها بالفعل (معرف العملية مكرر)");
-        }
+        String requestHash = IdempotencyService.hash(TenantContext.currentOrSystem() + "|" + reportId + "|"
+                + request.statusFilter() + "|" + request.decision() + "|" + (request.note() == null ? "" : request.note()));
+        return idempotencyService.execute("ATTENDANCE_BULK_DECISION", request.operationId(), requestHash,
+                () -> applyBulkDecision(reportId, request, actor),
+                this::serializeBulkDecision, this::deserializeBulkDecision);
+    }
+
+    private ReportingApi.BulkDecisionResponse applyBulkDecision(String reportId, ReportingApi.BulkDecisionRequest request, String actor) {
         var report = requireEditable(reportId);
         DailyStatus targetStatus;
         try {
             targetStatus = DailyStatus.valueOf(request.statusFilter());
         } catch (IllegalArgumentException e) {
-            throw new BusinessRuleException("حالة التصفية غير صالحة: " + request.statusFilter());
+            throw new BusinessRuleException("Invalid status filter.", "INVALID_STATUS_FILTER", org.springframework.http.HttpStatus.BAD_REQUEST);
         }
         var allResults = dailyAttendanceResultRepository.findByReportIdOrderByWorkDateAscEmployeeNameAsc(reportId);
         var matching = allResults.stream().filter(r -> r.getStatus() == targetStatus).toList();
@@ -219,8 +289,10 @@ public class ReportingService {
             Integer worked = (request.decision() == AttendanceDecision.NORMAL_DAY &&
                 (result.getStatus() == DailyStatus.MANUAL_ENTRY || result.getStatus() == DailyStatus.SINGLE_PUNCH))
                 ? result.getExpectedMinutes() : 0;
+            var before = result.decisionState();
             result.decide(request.decision(), worked,
                 "BULK[" + request.operationId() + "]: " + (request.note() != null ? request.note() : ""), actor);
+            recordDecision(reportId, result, request.operationId(), "BULK_DECISION", before, actor);
             successCount++;
         }
         dailyAttendanceResultRepository.saveAll(editable);
@@ -233,18 +305,40 @@ public class ReportingService {
             excluded.stream().map(DailyAttendanceResult::getId).toList());
     }
 
+    private String serializeBulkDecision(ReportingApi.BulkDecisionResponse response) {
+        return response.matchingCount() + ";" + response.editableCount() + ";" + response.excludedCount() + ";"
+                + response.successCount() + ";" + String.join(",", response.excludedRecordIds());
+    }
+
+    private ReportingApi.BulkDecisionResponse deserializeBulkDecision(String reference) {
+        String[] parts = reference.split(";", 5);
+        if (parts.length != 5) {
+            throw new BusinessRuleException("Corrupt idempotency replay reference.", "IDEMPOTENCY_CORRUPT_REPLAY",
+                    org.springframework.http.HttpStatus.INTERNAL_SERVER_ERROR);
+        }
+        List<String> excluded = parts[4].isBlank() ? List.of() : List.of(parts[4].split(","));
+        return new ReportingApi.BulkDecisionResponse(
+                Integer.parseInt(parts[0]), Integer.parseInt(parts[1]), Integer.parseInt(parts[2]),
+                Integer.parseInt(parts[3]), excluded);
+    }
+
     @Transactional
     public ReportingApi.Details decideDaily(String reportId, String resultId, ReportingApi.DecisionRequest request, String actor) {
         var report = requireEditable(reportId);
         var result = dailyAttendanceResultRepository.findById(resultId)
                 .filter(item -> item.getReportId().equals(reportId))
-                .orElseThrow(() -> new NotFoundException("Daily result not found in this report."));
-        if (!result.isBlocking() && result.getDecision() == null) throw new BusinessRuleException("This row does not require an HR decision.");
+                .orElseThrow(() -> new NotFoundException("Daily result not found in this report.", "RPT_DAILY_RESULT_NOT_FOUND"));
+        if (!result.isBlocking() && result.getDecision() == null) throw new BusinessRuleException("This row does not require an HR decision.", "RPT_ROW_NO_DECISION_REQUIRED", HttpStatus.CONFLICT);
         Integer worked = request.workedMinutes();
         if (worked == null && request.decision() == AttendanceDecision.NORMAL_DAY &&
                 (result.getStatus() == DailyStatus.MANUAL_ENTRY || result.getStatus() == DailyStatus.SINGLE_PUNCH)) worked = result.getExpectedMinutes();
         if (worked == null && request.decision() != AttendanceDecision.NORMAL_DAY) worked = 0;
+        if (request.expectedVersion() != null && result.getVersion() != request.expectedVersion()) {
+            throw new BusinessRuleException("تم تعديل السجل بواسطة مراجع آخر. أعد التحميل وحاول مجددًا.", "RPT_VERSION_CONFLICT", HttpStatus.CONFLICT);
+        }
+        var before = result.decisionState();
         result.decide(request.decision(), worked, request.note(), actor);
+        recordDecision(reportId, result, UUID.randomUUID().toString(), "DECIDE", before, actor);
         refreshUnresolved(report);
         return details(report);
     }
@@ -264,8 +358,10 @@ public class ReportingService {
 
         String decision = request.decision();
         String note = request.note() != null ? request.note() : "";
+        String downtimeOperationId = UUID.randomUUID().toString();
         for (var result : results) {
             if (!result.isBlocking()) continue;
+            var before = result.decisionState();
             switch (decision) {
                 case "NORMAL_DAY" -> result.decide(AttendanceDecision.NORMAL_DAY, result.getExpectedMinutes(),
                     "جهاز/كهرباء - يوم عمل عادي: " + note + " [" + actor + "]", actor);
@@ -277,6 +373,7 @@ public class ReportingService {
                     "عطل جهاز: " + note + " [" + actor + "]", actor);
                 case "INDIVIDUAL_REVIEW" -> { /* leave for individual review */ }
             }
+            recordDecision(reportId, result, downtimeOperationId, "DOWNTIME_DECISION", before, actor);
         }
         dailyAttendanceResultRepository.saveAll(results);
         refreshUnresolved(report);
@@ -302,7 +399,7 @@ public class ReportingService {
         var anomaly = requireAnomaly(reportId, anomalyId);
         if (anomaly.isReplay(request.operationId())) {
             if (anomaly.getDecision() != request.decision()) {
-                throw new BusinessRuleException("معرّف العملية مستخدم لقرار شذوذ مختلف.");
+                throw new BusinessRuleException("معرّف العملية مستخدم لقرار شذوذ مختلف.", "ANOM_OPERATION_ID_CONFLICT", HttpStatus.CONFLICT);
             }
             return new ReportingApi.DayAnomalyActionResponse(details(report), anomaly.getAffectedCount(), 0, 0);
         }
@@ -321,6 +418,7 @@ public class ReportingService {
                     continue;
                 }
                 String note = "[DAY_ANOMALY:" + anomalyId + "] " + request.reason();
+                var before = result.decisionState();
                 switch (request.decision()) {
                     case DEVICE_OUTAGE, PRESENT -> result.decide(AttendanceDecision.NORMAL_DAY,
                             result.getExpectedMinutes(), note, actor);
@@ -329,6 +427,7 @@ public class ReportingService {
                     case ABSENCE -> result.decide(AttendanceDecision.ABSENCE, 0, note, actor);
                     case DEFER -> { }
                 }
+                recordDecision(reportId, result, request.operationId(), "DAY_ANOMALY", before, actor);
                 applied++;
             }
             dailyAttendanceResultRepository.saveAllAndFlush(byId.values());
@@ -349,7 +448,7 @@ public class ReportingService {
         var report = requireEditable(reportId);
         var anomaly = requireAnomaly(reportId, anomalyId);
         if (anomaly.getStatus() != DayAnomalyStatus.RESOLVED) {
-            throw new BusinessRuleException("لا يمكن التراجع إلا عن حالة شذوذ معالجة.");
+            throw new BusinessRuleException("لا يمكن التراجع إلا عن حالة شذوذ معالجة.", "ANOM_REVERSE_RESOLVED_ONLY", HttpStatus.CONFLICT);
         }
         var snapshots = dayAnomalyResultSnapshotRepository.findByAnomalyId(anomalyId);
         var byId = dailyAttendanceResultRepository.findAllById(
@@ -364,8 +463,10 @@ public class ReportingService {
                 skipped++;
                 continue;
             }
+            var before = result.decisionState();
             result.restoreDecision(snapshot.getPreviousDecision(), snapshot.getPreviousManualMinutes(),
                     snapshot.getPreviousNote(), snapshot.getPreviousDecidedBy(), snapshot.getPreviousDecidedAt());
+            recordDecision(reportId, result, "REVERSE-" + anomalyId, "ANOMALY_REVERSE", before, actor);
             restored++;
         }
         dailyAttendanceResultRepository.saveAllAndFlush(byId.values());
@@ -394,12 +495,12 @@ public class ReportingService {
     public ReportingApi.Details decideHoliday(String reportId, String proposalId,
                                                ReportingApi.HolidayDecisionRequest request, String actor) {
         var report = requireEditable(reportId);
-        if (request.status() == HolidayProposalStatus.PENDING) throw new BusinessRuleException("Choose CONFIRMED or REJECTED.");
+        if (request.status() == HolidayProposalStatus.PENDING) throw new BusinessRuleException("Choose CONFIRMED or REJECTED.", "RPT_HOLIDAY_PROPOSAL_STATUS_REQUIRED", HttpStatus.CONFLICT);
         var proposal = holidayProposalRepository.findById(proposalId)
                 .filter(item -> item.getReportId().equals(reportId))
-                .orElseThrow(() -> new NotFoundException("Holiday proposal not found in this report."));
+                .orElseThrow(() -> new NotFoundException("Holiday proposal not found in this report.", "RPT_HOLIDAY_PROPOSAL_NOT_FOUND"));
         if (proposal.getStatus() != HolidayProposalStatus.PENDING && proposal.getStatus() != request.status()) {
-            throw new BusinessRuleException("This holiday proposal has already been decided.");
+            throw new BusinessRuleException("This holiday proposal has already been decided.", "RPT_HOLIDAY_PROPOSAL_ALREADY_DECIDED", HttpStatus.CONFLICT);
         }
         proposal.decide(request.status(), request.note(), actor);
         if (request.status() == HolidayProposalStatus.CONFIRMED) {
@@ -407,33 +508,39 @@ public class ReportingService {
                     .orElseGet(() -> confirmedHolidayRepository.save(new ConfirmedHoliday(proposal.getCategoryId(), proposal.getWorkDate(),
                             request.holidayName() == null || request.holidayName().isBlank() ? "إجازة مؤكدة" : request.holidayName(), actor)));
             dailyAttendanceResultRepository.findByReportIdAndCategoryIdAndWorkDate(reportId, proposal.getCategoryId(), proposal.getWorkDate())
-                    .forEach(item -> item.confirmHoliday(actor));
+                    .forEach(item -> {
+                        var before = item.decisionState();
+                        item.confirmHoliday(actor);
+                        recordDecision(reportId, item, "HOLIDAY-" + proposal.getId(), "HOLIDAY_DECISION", before, actor);
+                    });
         }
         refreshUnresolved(report);
         return details(report);
     }
 
     @Transactional
-    public ReportingApi.Details approve(String id, String actor) {
+    public TransitionResponse approve(String id, String actor) {
         var report = requireReport(id);
-        if (report.getStatus() == ReportStatus.APPROVED || report.getStatus() == ReportStatus.EXPORTED) return details(report);
+        if (report.getStatus() == ReportStatus.APPROVED || report.getStatus() == ReportStatus.EXPORTED) {
+            return WorkflowTransitions.response(report.getStatus().name(), report.getVersion(), ATTENDANCE_REPORT_WORKFLOW);
+        }
         long totalRecords = dailyAttendanceResultRepository.countByReportId(report.getId());
         if (totalRecords == 0) {
-            throw new BusinessRuleException("Cannot approve an empty report with 0 employee records.");
+            throw new BusinessRuleException("Cannot approve an empty report with 0 employee records.", "RPT_EMPTY_REPORT_APPROVAL", HttpStatus.CONFLICT);
         }
         refreshUnresolved(report);
         report.approve(actor);
         auditService.record("REPORT_APPROVE", "ATTENDANCE_REPORT", report.getId(), actor, "Approved attendance report for range " + report.getPeriodStart() + " to " + report.getPeriodEnd(), null);
-        return details(report);
+        return WorkflowTransitions.response(report.getStatus().name(), report.getVersion(), ATTENDANCE_REPORT_WORKFLOW);
     }
 
     @Transactional
-    public ReportingApi.Details reopen(String id) {
+    public TransitionResponse reopen(String id, String actor) {
         var report = requireReport(id);
         report.reopen();
         refreshUnresolved(report);
-        auditService.record("REPORT_REOPEN", "ATTENDANCE_REPORT", report.getId(), "ADMIN", "Reopened approved attendance report", null);
-        return details(report);
+        auditService.record("REPORT_REOPEN", "ATTENDANCE_REPORT", report.getId(), actor, "Reopened approved attendance report", null);
+        return WorkflowTransitions.response(report.getStatus().name(), report.getVersion(), ATTENDANCE_REPORT_WORKFLOW);
     }
 
     @Transactional
@@ -446,7 +553,7 @@ public class ReportingService {
         var grouped = results.stream().collect(Collectors.groupingBy(item -> item.getCategoryId() + "|" + item.getWorkDate()));
         var proposals = new ArrayList<HolidayProposal>();
         for (var entry : grouped.entrySet()) {
-            var group = entry.getValue(); var first = group.getFirst(); var category = categories.get(first.getCategoryId());
+            var group = entry.getValue(); var first = group.get(0); var category = categories.get(first.getCategoryId());
             if (category == null || category.getAttendanceMode() != AttendanceMode.BIOMETRIC) continue;
             long noPunchCount = group.stream().filter(item -> item.getStatus() == DailyStatus.NO_PUNCH).count();
             if (!group.isEmpty() && noPunchCount * 2 >= group.size()) {
@@ -505,14 +612,36 @@ public class ReportingService {
         var categories = results.stream().collect(Collectors.groupingBy(DailyAttendanceResult::getCategoryId)).entrySet().stream()
                 .map(entry -> categorySummary(entry.getKey(), entry.getValue())).sorted(Comparator.comparing(ReportingApi.CategorySummary::categoryName)).toList();
         return new ReportingApi.Details(summary(report), categories, results.stream().map(this::daily).toList(),
-                proposals.stream().map(this::proposal).toList(), anomalies.stream().map(this::anomaly).toList());
+                proposals.stream().map(this::proposal).toList(), anomalies.stream().map(this::anomaly).toList(),
+                allowedActions(report.getStatus()));
+    }
+
+    private List<String> allowedActions(ReportStatus status) {
+        return ATTENDANCE_REPORT_ACTIONS.getOrDefault(status.name(), List.of());
+    }
+
+    public List<ReportingApi.DecisionHistoryView> decisionHistory(String reportId) {
+        requireReport(reportId);
+        return attendanceReportDecisionRepository.findByReportIdOrderByCreatedAtAsc(reportId).stream()
+                .map(item -> new ReportingApi.DecisionHistoryView(item.getId(), item.getReportId(), item.getResultId(),
+                        item.getOperationId(), item.getOperation(), item.getPreviousDecision(), item.getPreviousManualMinutes(),
+                        item.getPreviousNote(), item.getPreviousDecidedBy(), item.getPreviousDecidedAt(),
+                        item.getNewDecision(), item.getNewManualMinutes(), item.getNewNote(), item.getActor(),
+                        item.getCreatedAt()))
+                .toList();
+    }
+
+    private void recordDecision(String reportId, DailyAttendanceResult result, String operationId, String operation,
+                                DailyAttendanceResult.DecisionState before, String actor) {
+        attendanceReportDecisionRepository.save(new AttendanceReportDecision(
+                reportId, result.getId(), operationId, operation, before, result.decisionState(), actor));
     }
 
     private ReportingApi.CategorySummary categorySummary(String categoryId, List<DailyAttendanceResult> items) {
         var arrivals = items.stream().map(DailyAttendanceResult::getFirstPunch).filter(java.util.Objects::nonNull)
                 .map(instant -> instant.atZone(companyZone).toLocalTime().toSecondOfDay()).toList();
         LocalTime typical = arrivals.isEmpty() ? null : LocalTime.ofSecondOfDay((long) arrivals.stream().mapToInt(Integer::intValue).average().orElse(0));
-        return new ReportingApi.CategorySummary(categoryId, items.getFirst().getCategoryName(), items.size(),
+        return new ReportingApi.CategorySummary(categoryId, items.get(0).getCategoryName(), items.size(),
                 items.stream().filter(item -> item.getStatus() == DailyStatus.PRESENT).count(),
                 items.stream().filter(DailyAttendanceResult::isBlocking).count(), typical,
                 items.stream().mapToLong(DailyAttendanceResult::getOvertimeMinutes).sum());
@@ -528,24 +657,24 @@ public class ReportingService {
                 + proposals.stream().filter(proposal -> proposal.getStatus() == HolidayProposalStatus.PENDING).count());
     }
 
-    private AttendanceReport requireReport(String id) { return attendanceReportRepository.findById(id).orElseThrow(() -> new NotFoundException("Report not found.")); }
-    private AttendanceReport requireEditable(String id) { var report = requireReport(id); if (report.getStatus() != ReportStatus.IN_REVIEW) throw new BusinessRuleException("Only in-review reports can be changed."); return report; }
+    private AttendanceReport requireReport(String id) { return attendanceReportRepository.findById(id).orElseThrow(() -> new NotFoundException("Report not found.", "RPT_NOT_FOUND")); }
+    private AttendanceReport requireEditable(String id) { var report = requireReport(id); if (report.getStatus() != ReportStatus.IN_REVIEW) throw new BusinessRuleException("Only in-review reports can be changed.", "RPT_ONLY_IN_REVIEW", HttpStatus.CONFLICT); return report; }
     private DayAnomaly requireAnomaly(String reportId, String anomalyId) {
         return dayAnomalyRepository.findById(anomalyId).filter(item -> item.getReportId().equals(reportId))
-                .orElseThrow(() -> new NotFoundException("حالة الشذوذ غير موجودة داخل هذا التقرير."));
+                .orElseThrow(() -> new NotFoundException("حالة الشذوذ غير موجودة داخل هذا التقرير.", "ANOM_NOT_FOUND_IN_REPORT"));
     }
 
     private ReportingApi.Summary summary(AttendanceReport report) {
         return new ReportingApi.Summary(report.getId(), report.getPeriodStart(), report.getPeriodEnd(), report.getPayCycle(), report.getStatus(),
                 report.getUnresolvedCount(), report.getCreatedBy(), report.getCreatedAt(), report.getApprovedBy(),
-                report.getApprovedAt(), report.getExportedAt(), report.getVersion());
+                report.getApprovedAt(), report.getExportedAt(), report.getVersion(), report.getGenerationHash());
     }
     private ReportingApi.DailyResult daily(DailyAttendanceResult item) {
         return new ReportingApi.DailyResult(item.getId(), item.getEmployeeId(), item.getEmployeeCode(), item.getEmployeeName(),
                 item.getCategoryId(), item.getCategoryName(), item.getWorkDate(), item.getFirstPunch(), item.getLastPunch(),
                 item.getPunchCount(), item.getExpectedMinutes(), item.getWorkedMinutes(), item.getManualWorkedMinutes(),
                 item.getEffectiveWorkedMinutes(), item.getLateMinutes(), item.getEarlyLeaveMinutes(), item.getOvertimeMinutes(),
-                item.getStatus(), item.getWarning(), item.getDecision(), item.getDecisionNote(), item.getDecidedBy(), item.getDecidedAt(), item.getRuleVersion());
+                item.getStatus(), item.getWarning(), item.getDecision(), item.getDecisionNote(), item.getDecidedBy(), item.getDecidedAt(), item.getRuleVersion(), item.getVersion());
     }
     private ReportingApi.HolidayProposalView proposal(HolidayProposal item) {
         return new ReportingApi.HolidayProposalView(item.getId(), item.getCategoryId(), item.getCategoryName(), item.getWorkDate(),
@@ -563,12 +692,12 @@ public class ReportingService {
     private record DayCategoryKey(LocalDate workDate, String categoryId, String categoryName) { }
 
     private void validatePeriod(LocalDate start, LocalDate end) {
-        if (end.isBefore(start)) throw new BusinessRuleException("Report end date cannot be before start date.");
+        if (end.isBefore(start)) throw new BusinessRuleException("Report end date cannot be before start date.", "RPT_END_BEFORE_START", HttpStatus.CONFLICT);
         if (start.isBefore(LocalDate.of(2000, 1, 1)) || end.isAfter(LocalDate.of(2200, 12, 31))) {
-            throw new BusinessRuleException("Report dates are outside the supported range.");
+            throw new BusinessRuleException("Report dates are outside the supported range.", "RPT_DATES_OUT_OF_RANGE", HttpStatus.CONFLICT);
         }
         if (java.time.temporal.ChronoUnit.DAYS.between(start, end) > 365) {
-            throw new BusinessRuleException("A report period cannot exceed 366 days.");
+            throw new BusinessRuleException("A report period cannot exceed 366 days.", "RPT_PERIOD_EXCEEDS_366_DAYS", HttpStatus.CONFLICT);
         }
     }
 
@@ -586,6 +715,12 @@ public class ReportingService {
         String source = categories.stream().sorted(Comparator.comparing(AttendanceCategory::getId)).map(item -> item.getId() + ':' + item.getVersion()).collect(Collectors.joining("|"))
                 + schedules.stream().sorted(Comparator.comparing(ScheduleRule::getId)).map(ScheduleRule::getId).collect(Collectors.joining("|"))
                 + employees.stream().sorted(Comparator.comparing(Employee::getId)).map(item -> item.getId() + ':' + item.getVersion()).collect(Collectors.joining("|"));
+        try { return HexFormat.of().formatHex(MessageDigest.getInstance("SHA-256").digest(source.getBytes(StandardCharsets.UTF_8))); }
+        catch (NoSuchAlgorithmException exception) { throw new IllegalStateException(exception); }
+    }
+
+    private String generationHash(LocalDate periodStart, LocalDate periodEnd, PayCycle payCycle) {
+        String source = TenantContext.currentOrSystem() + "|" + periodStart + "|" + periodEnd + "|" + payCycle;
         try { return HexFormat.of().formatHex(MessageDigest.getInstance("SHA-256").digest(source.getBytes(StandardCharsets.UTF_8))); }
         catch (NoSuchAlgorithmException exception) { throw new IllegalStateException(exception); }
     }
